# OMM_NeuroMuscular

./: .gitignore  D1MSN.xml  D2MSN.xml  EBNleft.xml  EBNright.xml  IBNleft.xml  IBNright.xml  InhibFEF.xml  LIN.xml  LINexp.xml  LINlinear.xml  LINlinearNoisy.xml  LINret.xml  LLBNleft.xml  LLBNright.xml  MuscleInputGen.xml  OPN.xml  OccularMotorModel.proj  PassThruSacGen.xml  README.md  Scaling.xml  TNleft.xml  TNleft1.xml  Weight.xml  WorldToBrain.xml  commonParam.xml  experiment0.xml  experiment3.xml  grid.xml  integrator.xml  luminances_example.json  metaData.xml  model.xml  noisypass.xml  passthrough.xml  rand3d.xml  threshpass.xml  wr.csv
JustBrain/: experiment0.xml  experiment1.xml  experiment10.xml  experiment3.xml  experiment5.xml  experiment6.xml  experiment7.xml  experiment8.xml  experiment9.xml  model.xml
JustFEF/: experiment0.xml  experiment1.xml  experiment10.xml  experiment2.xml  experiment3.xml  experiment4.xml  experiment5.xml  experiment6.xml  experiment7.xml  experiment8.xml  experiment9.xml  model.xml
JustSC/: experiment0.xml  experiment1.xml  experiment10.xml  experiment2.xml  experiment3.xml  experiment4.xml  experiment5.xml  experiment6.xml  experiment7.xml  experiment8.xml  experiment9.xml  integrator.xml  model.xml
Model1/: LINlinear.xml  OccularMotorModel.proj  experiment0.xml  integrator.xml  luminances.json  model.xml
Model2/: D2MSN.xml  InhibFEF.xml  LIN.xml  LINlinear.xml  OccularMotorModel.proj  experiment2.xml  experiment3.xml  external.xsl  gauss_conn-1.py  gauss_conn.py  grid.xml  model.xml  noisyDA.xml
Model3/: experiment0.xml  luminances.json  model.xml
Model4/: OcularMotorModel.proj  experiment0.xml  experiment2.xml  luminances.json  model.xml
Model5/: experiment4.xml  external.xsl  luminances.json  model.xml
TModel0/: luminances.json  model.xml  noisypass.xml
TModel1/: D1MSN.xml  experiment0.xml  luminances.json  model.xml
TModel2/: commonParam.xml  luminances.json  model.xml  threshpass.xml
TModel3/: OcularMotorModel.proj  experiment1.xml  luminances.json  model.xml
TModel4/: .gitignore  OcularMotorModel.proj  Summer.xml  experiment0.xml  experiment10.xml  experiment6.xml  experiment7.xml  experiment8.xml  model.xml
TModel5/: experiment5.xml  experiment8.xml  experiment9.xml  luminances.json  model.xml
batch_scripts/: .gitignore  cleanup.sh  readme.contents
batch_scripts/analysis/: doublestep_forpaper.m  find_completed.sh  find_missing.sh  fit_curve_down.m  fit_curve_up.m  load_allweights.m  load_interp.m  load_justdata.m  load_ocm.m  load_ocm_min.m  load_sbg.m  load_sbgmaps.m  load_traj.m  nsurf.m  omplot.m  omplots.m  omreadfoundmaps.m  omreadtheorymaps.m  omseq.m  omsetgrid.m  omsum.m  omsurf.m  omsurf_ax.m  omview.m  plot_sbg_forpaper.m  plot_scd_seq.m  plot_world_targets.m  resizegraph.m  retview.m  view_omm.m  weightproving_errors.m
batch_scripts/example_luminances/: fix_plus_double_gap_lumainces.json  fix_plus_single_step_lumainces.json  single_luminances.json
batch_scripts/example_mapping/: graphmapping.m  graphmapping_sepfigs.m  luminances.json  modelframes.oct  readme.txt  worldtest_mapping.cpp  worldtest_mapping.m
batch_scripts/expt_antisaccades/: baseline.m  explore_antisaccades.m  save_results.m
batch_scripts/expt_double_steps/: doublestep.sh  more_doublestep.sh  readme.txt
batch_scripts/expt_double_steps2/: readme.txt
batch_scripts/expt_errorsurf/: eesetgrid.m  load_errorsurf.m  plot_errorsurf.m  plot_forpaper.m  plot_forpaperTModel3.m  plot_results.m  run_expt.sh  run_few.sh
batch_scripts/expt_latency_vs_dopamine/: 20170524_131158_targlum1.800000_gap-0.100000.mat  find_latencies.m  plot_sacc_vs_d.m  readme.graph  sacc_lat_vs_dop.sh
batch_scripts/expt_latency_vs_gap/: 20151008_220405_results_da_0.300000.mat  20151009_194552_results_da_0.300000.mat  combined-targ_lum1.8.csv  combined-targ_lum1.csv  combined-targ_lum2.csv  combined-targ_lum3.csv  combined-targ_lum4.csv  export_combined.m  find_latencies.m  plot_combined.m  plot_sacc_vs_g.m  sacc_lat_vs_gap.m  sacc_lat_vs_gap.sh  save_results.m
batch_scripts/expt_llbn_vs_targetpos/: README.md  llbn_vs_targetpos.sh  (+4 more)
c++/: .gitignore  CMakeLists.txt  Gabor Mapping.ipynb  RetinotopicMapping.ipynb  centroid.cpp  common.h  debug.h  doublehump.cpp  eyeframe.cpp  eyeframe.h  leftrightupdown.cpp  leftrightupdown.m  luminance.h  luminances_dual.json  luminances_single.json  make_movie.m  multicentroid.cpp  powercentroid.cpp  readme.build  readme.worldmapping  show_data.m  weightmap.cpp  worldDataMaker.cpp  worldframe.cpp  worldframe.h  worldseries.cpp  worldtest.cpp  worldtest_coords.cpp  worldtest_coords.m  worldtest_mapping.cpp  worldtest_mapping.m  worldtest_singlelum.cpp  worldtest_singlelum.m
c++/brahms_namespace/: README.md
c++/saccsim/: .gitignore  README.md
c++/saccsim/config/: params_brahms.txt  params_default.txt  params_default.xml
c++/saccsim/src/: CMakeLists.txt
c++/saccsim/src/BRAHMS/: CMakeLists.txt  brahmscmpt_shared.cpp  brahmscmpt_shared.h  brahmssaccadecontroller.h  component.cpp  settings.cpp  settings.h  utils.cpp  utils.h
c++/saccsim/src/Saccsim/: CMakeLists.txt  eyepassiveforce.cpp  eyepassiveforce.h  forceupdater.h  musclegeomrecorder.cpp  musclegeomrecorder.h  osimutils.cpp  osimutils.h  saccadesimulator.cpp  saccadesimulator.h  saccadesimulatordll.h  saccadesimulatorimpl.cpp  saccadesimulatorimpl.h
c++/saccsim/src/test_brahms/: plot_output.oct  plotyy_output.oct  run_test.sh  test_brahms.xml
c++/saccsim/test_brahms/: .gitignore  plot_output.oct  run_test.sh  test_brahms.xml  test_brahms_exe.xml  to_access_data.txt
lab_book/: 20150219_double_exp_fit.mat  20_degree_latencies.mat  Gabor.ipynb  SC_physiology_comparison.ods  TectotectalInhibition.ipynb  WideningGaussian.ipynb  const_weight_example.m  disc_weight_data.mat  disc_weight_fit.mat  sin_bump_map.mat  sixth_order_fit.mat  vanGisbergen_et_al_1985.ipynb  widening_gaussian.m
matlab/: .gitignore  readme.contents
movies/: convertLogs  convertLogs_sebpc  movieColour.sh  movieFast.sh  movieFast_sebpc.sh  qs_movieFast.sh
papers/: .gitignore
(+464 files in other folders)
